# r3d_library

./: CMakeLists.txt
3DLibrary/: AnalyticalPlanesReconstruction.cpp  AnalyticalPlanesReconstruction.h  BirkysNormalSegmentation.cpp  BirkysNormalSegmentation.h  CMakeLists.txt  ClosedSpace.cpp  ClosedSpace.h  CloudRotationTest.cpp  CloudRotationTest.h  ColorGenerator.cpp  ColorGenerator.h  CommonUtil.cpp  CommonUtil.h  DataStatistics.cpp  DataStatistics.h  Line.cpp  Line.h  Method.cpp  Method.h  NumeroUnoReconstruction.cpp  NumeroUnoReconstruction.h  Object.cpp  Object.h  PlanePointsExamination.cpp  PlanePointsExamination.h  PlaneSegment.cpp  PlaneSegment.h  Polygon.cpp  Polygon.h  Primitives.cpp  Primitives.h  ReadMe.txt  Rectangle.cpp  Rectangle.h  SlicBasedSegmentation.cpp  SlicBasedSegmentation.h  Wall.cpp  Wall.h  stdafx.h
DataHandling/: CMakeLists.txt  DataReader.cpp  DataReader.h  InputDataParser.cpp  InputDataParser.h  NoiseRemover.cpp  NoiseRemover.h  ParameterGrabber.cpp  ParameterGrabber.h  ReadMe.txt  stdafx.cpp  stdafx.h  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
Exporter/: CMakeLists.txt  Exporter.cpp  Exporter.h  ExporterTest.cpp  ReadMe.txt
R3DGui/: CMakeLists.txt  MethodWidget.cpp  MethodWidget.h  OutliersWidget.cpp  OutliersWidget.h  ReadMe.txt  ReconstructionWidget.cpp  ReconstructionWidget.h  SLICSegmentationWidget.cpp  SLICSegmentationWidget.h  SegmentationWidget.cpp  SegmentationWidget.h  conf.xml  gui.cpp  gui.h  gui.rc  guiDlg.cpp  guiDlg.h  resource.h  stdafx.cpp  stdafx.h
(+4 files in other folders)
